--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
             <artifactId>jstl</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
