--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <!-- For Live Reloading -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
