fixed user-role table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,4 @@ spring.thymeleaf.cache=false
 # = Spring Security / Queries for AuthenticationManagerBuilder  
 # ==============================================================
 spring.queries.users-query=select username, password, active from user where username=?
-spring.queries.roles-query=select u.username, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.username=?
+spring.queries.roles-query=select u.username, r.role from user u join role r on(u.role = r.role_id) where u.username=?
