--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,4 @@ spring.thymeleaf.cache=false
 # = Spring Security / Queries for AuthenticationManagerBuilder  
 # ==============================================================
 spring.queries.users-query=select username, password, active from user where username=?
-spring.queries.roles-query=select u.username, u.role from user u where username=?
+spring.queries.roles-query=select u.username, u.role_string from user u where u.username=?
