--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,23 +2,27 @@
 # = DATA SOURCE
 # ===============================
 spring.datasource.url = jdbc:mysql://localhost:3306/ooc_test?useUnicode=yes&characterEncoding=UTF-8
-# Username and password
 spring.datasource.username = ooc
 spring.datasource.password = oocpass
-
-# Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-# Show or not log for each sql query
-spring.jpa.show-sql = false
-
-# Hibernate ddl auto (create, create-drop, update): with "update" the database
-# schema will be automatically updated accordingly to java entities found in
-# the project
+spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
-security.basic.enabled=false
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+# ===============================
+# = Thymeleaf configurations
+# ===============================
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
+
+# ==============================================================
+# = Spring Security / Queries for AuthenticationManagerBuilder  
+# ==============================================================
+spring.queries.users-query=select username, password, active from user where username=?
+spring.queries.roles-query=select u.username, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.username=?
