--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,7 @@ spring.thymeleaf.cache=false
 # ==============================================================
 spring.queries.users-query=select username, password, active from user where username=?
 spring.queries.roles-query=select u.username, r.role from user u join role r on(u.role = r.role_id) where u.username=?
+
+
+spring.freemarker.template-loader-path: /
+spring.freemarker.suffix: .ftl
