--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 # = DATA SOURCE
 # ===============================
 spring.datasource.url = jdbc:mysql://localhost:3306/ooc_test?useUnicode=yes&characterEncoding=UTF-8
-spring.datasource.username = root
-spring.datasource.password = password
+spring.datasource.username = ooc
+spring.datasource.password = oocpass
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 
@@ -20,6 +20,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # ===============================
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
 
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder  
@@ -27,4 +28,4 @@ spring.thymeleaf.cache=false
 spring.queries.users-query=select username, password, active from user where username=?
 spring.queries.roles-query=select u.username, r.role from user u join role r on(u.role = r.role_id) where u.username=?
 
-server.port=80
+server.port=8080
